syntax = "proto3";

package demo;

option java_package = "org.example.greeting";
option java_multiple_files = true;
option java_outer_classname = "GreetingProto";

service GreetingService {
    rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string reply = 1;
}
